--- a/app/index.html
+++ b/app/index.html
@@ -74,16 +74,36 @@
         <h1>Les articles</h1>
         <div class="row">
             <div class="articlewrap small-12 medium-12 large-6 columns">
-                <div class="article">
-                    <h2>WEI <span><i class="ion-chevron-right"></i></span></h2>
-                </div>
+                <a href="{{@blog.url}}/article-guide">
+                    <div class="article" style="background-image: url({{@blog.url}}/images/articles/wei.jpg);">
+                        <h2>wei <span><i class="ion-chevron-right"></i></span></h2>
+                    </div>                    
+                </a>
             </div>
             <div class="articlewrap small-12 medium-12 large-6 columns">
-                <div class="article" style="background-image: url(images/articles/survie.jpg);">
-                    <h2>Guide de survie <span><i class="ion-chevron-right"></i></span></h2>
-                </div>
+                <a href="{{@blog.url}}/article-guide">
+                    <div class="article" style="background-image: url({{@blog.url}}/images/articles/survie.jpg);">
+                        <h2>Guide de survie <span><i class="ion-chevron-right"></i></span></h2>
+                    </div>                    
+                </a>
             </div>
         </div>
+        <div class="row">
+            <div class="articlewrap small-12 medium-12 large-6 columns">
+                <a href="{{@blog.url}}/associatif">
+                    <div class="article" style="background-image: url({{@blog.url}}/images/articles/wei.jpg);">
+                        <h2>associatif <span><i class="ion-chevron-right"></i></span></h2>
+                    </div>                    
+                </a>
+            </div>
+            <div class="articlewrap small-12 medium-12 large-6 columns">
+                <a href="{{@blog.url}}/article-guide">
+                    <div class="article" style="background-image: url({{@blog.url}}/images/articles/survie.jpg);">
+                        <h2>Guide de survie <span><i class="ion-chevron-right"></i></span></h2>
+                    </div>                    
+                </a>
+            </div>
+        </div>        
     </section>
     <section id="actus" class="">
         <h1>Les actus</h1>
@@ -152,12 +172,12 @@
                 </div>
             </div>
             <div class="videowrap small-12 medium-6 large-3 columns">
-                <div class="video" data-embed="U_wvSfgaTAo">
-                    <div class="thumbnail" style="background-image:url(images/videos/thumb1f.jpg); ">
+                <div class="video" data-embed="--VrTIFt-gg">
+                    <div class="thumbnail" style="background-image:url(images/videos/cab.jpg); ">
                         <i class="ion-ios7-play"></i>
                     </div>
                     <div class="title">
-                        <h3>Zapping soirée</h3>
+                        <h3>Soirée cab</h3>
                     </div>
                 </div>
             </div>
@@ -179,10 +199,10 @@
             <div class="medium-7 columns">
             <p>Merci à tous les membres du CI E1 2014 et particulièrement à</p>
                 <ul class="members">
-                    <li>Victor Talvaz aka Kinder (Club *Nix)</li>
-                    <li>Florian Loyau aka Fira (Club *Nix)</li>
-                    <li>Franck Bonnet (SMIG ESIEE)</li>
+                    <li>Victor Talvaz et Florian Loyau (Club *Nix)</li>
+                    <li>Naji Astier et Rémi Nicole (Réseau & SVG)</li>
                     <li>DGQP</li>
+                    <li>Nicolas Taltaud et Vincent Salakhar (Contenu)</li>
                 </ul>
             </div>
         </div>
